--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
             "pre-commit": "yarn lint:fix",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
+    },
+    "dependencies": {
+        "dotenv": "^16.0.0"
     }
 }
