--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -15,6 +15,8 @@ compiler:
     remappings:
       - "@openzeppelin=OpenZeppelin/openzeppelin-contracts@3.1.0"
 
+dotenv: .env
+
 reports:
   exclude_paths:
     - contracts/test/Token.sol
